# digitaljs

./: .gitignore  Cargo.toml  package-lock.json  package.json  test_result.txt  webpack.config.js
examples/: extenders.json  operations.json  priority_encoder.json  subcircuit.json  testgates.json
src/: index.mjs
src/engines/: wasm-js-functions.mjs  wasm-worker-worker.mjs  wasm-worker.mjs  worker.mjs
srcRust/: cell_arith.rs  cell_bus.rs  cell_dff.rs  cell_fsm.rs  cell_gates.rs  cell_io.rs  cell_memory.rs  cell_mux.rs  gate.rs  graph.rs  js_types.rs  lib.rs  link.rs  operations.rs  vector3vl.rs
tests/: index.test.mjs
