[package]
name = "digitaljs-wasm-worker"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
path = "srcRust/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bnum = "0.13.0"
js-sys = "0.3.77"
priority-queue = "2.3.1"
wasm-bindgen = "0.2"

[features]
default = ["web"]
node = []
web = []
